# tg_llama2_whisper

./: .dockerignore  .env_template  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  start_docker.sh
src/: summarizer.py  tg.py  transcribe_audio.py
